Compare the volume of ischemic regions pre-/post-CABG

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -319,10 +319,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cases that didn't reach hyperaemia\n",
+    "Removed_Cases = [\"SU25\", \"VA04\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataMapped = []\n",
     "\n",
     "for patient_id in patient_ids:\n",
-    "    if patient_id in [\"SU25\", \"VA04\"]: # Cases that didn't reach hyperaemia\n",
+    "    if patient_id in Removed_Cases: \n",
     "        continue\n",
     "    tags = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['stenosis tag'])\n",
     "    ischemia = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['is-ischemic'])\n",
@@ -891,14 +901,204 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Thresholding on index MBF"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def GetVolume(Grid):\n",
+    "    Volume = 0\n",
+    "    for i in range(Grid.GetNumberOfCells()):\n",
+    "        voxel = Grid.GetCell(i)\n",
+    "        cell_bounds = voxel.GetBounds()\n",
+    "        Volume += abs(cell_bounds[0] - cell_bounds[1]) * abs(cell_bounds[2] - cell_bounds[3]) * abs(cell_bounds[4] - cell_bounds[5])\n",
+    "    \n",
+    "    return Volume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume_data_ischemic = []\n",
+    "volume_data_nonischemic = []\n",
+    "Removed_Cases += ['SU03']\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "    \n",
+    "    normalization_method = \"classic\"\n",
+    "    for file in VTUFiles:\n",
+    "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_A = Normalize(ReadVTUFile(file), normalization_method)\n",
+    "        elif f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_B = Normalize(ReadVTUFile(file), normalization_method)\n",
+    "\n",
+    "    nonischemic_grid_A = ThresholdByUpper(MBF_A, \"IndexMBF\", 0.8)\n",
+    "    nonischemic_grid_B = ThresholdByUpper(MBF_B, \"IndexMBF\", 0.8)\n",
+    "\n",
+    "    IschemicVolume_A = (GetVolume(MBF_A) - GetVolume(nonischemic_grid_A))/GetVolume(MBF_A)*100\n",
+    "    IschemicVolume_B = (GetVolume(MBF_B) - GetVolume(nonischemic_grid_B))/GetVolume(MBF_B)*100\n",
+    "\n",
+    "    ischemia_presence = list(df[df[\"patient_id\"] == patient_id][\"is_ischemic\"])\n",
+    "    is_ischemic = any(ischemia_presence)\n",
+    "    if is_ischemic:\n",
+    "        volume_data_ischemic.append({\n",
+    "            \"patient_id\": patient_id,\n",
+    "            \"Volume_A\": IschemicVolume_A,\n",
+    "            \"Volume_B\": IschemicVolume_B\n",
+    "        })\n",
+    "    else:\n",
+    "        volume_data_nonischemic.append({\n",
+    "            \"patient_id\": patient_id,\n",
+    "            \"Volume_A\": IschemicVolume_A,\n",
+    "            \"Volume_B\": IschemicVolume_B\n",
+    "        })\n",
+    "\n",
+    "volume_data_ischemic = pd.DataFrame(volume_data_ischemic)\n",
+    "volume_data_nonischemic = pd.DataFrame(volume_data_nonischemic)\n",
+    "\n",
+    "volume_entire_cohort = pd.concat([volume_data_ischemic, volume_data_nonischemic], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1 = pd.DataFrame({\n",
+    "    'Volume': volume_entire_cohort[\"Volume_A\"],\n",
+    "    'Case': ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_A\"]),\n",
+    "    'Type': ['Pre-CABG'] * len(volume_entire_cohort[\"Volume_A\"])\n",
+    "})\n",
+    "\n",
+    "df_2 = pd.DataFrame({\n",
+    "    'Volume': volume_entire_cohort[\"Volume_B\"],\n",
+    "    'Case': ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_B\"]),\n",
+    "    'Type': ['Post-CABG'] * len(volume_entire_cohort[\"Volume_B\"])\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_1, df_2], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Case', y='Volume', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
+    "\n",
+    "ax.set_ylabel(\"Volume of Ischemic Regions (%)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A = pd.DataFrame({\n",
+    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_A\"], volume_data_nonischemic[\"Volume_A\"]]),\n",
+    "    'Case': ['Ischemic'] * len(volume_data_ischemic[\"Volume_A\"]) +\n",
+    "            ['NonIschemic'] * len(volume_data_nonischemic[\"Volume_A\"]),\n",
+    "    'Type': ['Pre-CABG'] * (len(volume_data_ischemic[\"Volume_A\"]) + len(volume_data_nonischemic[\"Volume_A\"]))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_B\"], volume_data_nonischemic[\"Volume_B\"]]),\n",
+    "    'Case': ['Ischemic'] * len(volume_data_ischemic[\"Volume_B\"]) +\n",
+    "            ['NonIschemic'] * len(volume_data_nonischemic[\"Volume_B\"]),\n",
+    "    'Type': ['Post-CABG'] * (len(volume_data_ischemic[\"Volume_B\"]) + len(volume_data_nonischemic[\"Volume_B\"]))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Case', y='Volume', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
+    "\n",
+    "ax.set_ylabel(\"Volume of Ischemic Regions (%)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6,5))\n",
+    "\n",
+    "for i in range(len(volume_data_ischemic)):\n",
+    "    if i == 0:\n",
+    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"red\", label = \"Ischemic\")\n",
+    "    else:\n",
+    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"red\", label = None)\n",
+    "for i in range(len(volume_data_nonischemic)):\n",
+    "    if i == 0:\n",
+    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"green\", label = \"NonIschemic\")\n",
+    "    else:\n",
+    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"green\", label = None)\n",
+    "plt.xticks([0, 1], [\"Pre-CABG\", \"Post-CABG\"])\n",
+    "plt.ylabel(\"Volume of Ischemic Regions (%)\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetStats(dataframe):\n",
+    "    q1, q2, q3 = np.percentile(dataframe, [25, 50, 75])\n",
+    "    average = np.mean(dataframe)\n",
+    "    std = np.std(dataframe)\n",
+    "    return q2, q3-q1, average, std\n",
+    "\n",
+    "print(\"TerritoryTag\", \"Median\", \"IQR\", \"Mean\", \"std\")\n",
+    "volume_ischemic_A = np.concatenate([volume_data_ischemic[\"Volume_A\"]])\n",
+    "print(\"Volume of Ischemic Regions (Ischemic Cases) Pre-CABG: \", GetStats(volume_ischemic_A))\n",
+    "\n",
+    "volume_ischemic_B = np.concatenate([volume_data_ischemic[\"Volume_B\"]])\n",
+    "print(\"Volume of Ischemic Regions (Ischemic Cases) Post-CABG: \", GetStats(volume_ischemic_B))\n",
+    "\n",
+    "volume_nonischemic_A = np.concatenate([volume_data_nonischemic[\"Volume_A\"]])\n",
+    "print(\"Volume of Ischemic Regions (Nonischemic Cases) Pre-CABG: \", GetStats(volume_nonischemic_A))\n",
+    "\n",
+    "volume_nonischemic_B = np.concatenate([volume_data_nonischemic[\"Volume_B\"]])\n",
+    "print(\"Volume of Ischemic Regions (Nonischemic Cases) Post-CABG: \", GetStats(volume_nonischemic_B))\n",
+    "\n",
+    "EntireCohort_A = np.concatenate([volume_entire_cohort[\"Volume_A\"]])\n",
+    "print(\"Volume of Ischemic Regions (Entire Dataset) Pre-CABG: \", GetStats(EntireCohort_A))\n",
+    "\n",
+    "EntireCohort_B = np.concatenate([volume_entire_cohort[\"Volume_B\"]])\n",
+    "print(\"Volume of Ischemic Regions (Entire Dataset) Post-CABG: \", GetStats(EntireCohort_B))"
+   ]
   }
  ],
  "metadata": {
