Add some measurements

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -301,9 +301,9 @@
     "    \n",
     "    \n",
     "    #BoxPlot(data)\n",
-    "    #ViolinPlot(data)\n",
-    "    #print(\"--- Mapping Results:\")\n",
-    "    #ViolinPlot(dataMapped)\n"
+    "    ViolinPlot(data)\n",
+    "    print(\"--- Mapping Results:\")\n",
+    "    ViolinPlot(dataMapped)\n"
    ]
   },
   {
@@ -381,6 +381,12 @@
     "threshold2 = 0.8 * np.median(non_ischemic_values)  # 20% drop\n",
     "threshold3 = 0.7 * np.median(non_ischemic_values)  # 30% drop\n",
     "\n",
+    "count_ischemic = 0\n",
+    "count_10 = 0\n",
+    "count_20 = 0\n",
+    "count_30 = 0\n",
+    "\n",
+    "\n",
     "for item in dataMapped:\n",
     "    tag_ = item[\"tag\"]\n",
     "    if item[\"is_ischemic\"]:\n",
@@ -393,19 +399,36 @@
     "            item[\"ischemic_grade\"] = 1\n",
     "            item[\"is_ischemic\"] = False\n",
     "            print(\"10-20% drop\", item[\"patient_id\"], item[\"tag\"])\n",
+    "            count_10 += 1\n",
     "\n",
     "        elif threshold3 < mbf_median <= threshold2:\n",
     "            item[\"ischemic_grade\"] = 2\n",
     "            item[\"is_ischemic\"] = True\n",
     "            print(\"20-30% drop\", item[\"patient_id\"], item[\"tag\"])\n",
+    "            count_ischemic += 1\n",
+    "            count_20 += 1\n",
     "\n",
     "        else:\n",
     "            item[\"ischemic_grade\"] = 3\n",
     "            item[\"is_ischemic\"] = True\n",
     "            print(\">30% drop\", item[\"patient_id\"], item[\"tag\"])\n",
+    "            count_ischemic += 1\n",
+    "            count_30 += 1\n",
     "\n",
     "\n",
     "df = pd.DataFrame(dataMapped)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(count_ischemic)\n",
+    "print(count_10)\n",
+    "print(count_20)\n",
+    "print(count_30)"
    ]
   },
   {
@@ -575,13 +598,13 @@
     "std = np.std(mbf_ischemic30_B)\n",
     "print(\"ischemic_grafted30_B\",q2, q3-q1, average, std)\n",
     "\n",
-    "mbf_nonischemic_A = np.concatenate(df[df['ischemic_grade'] == 0]['absMBF_A'].values)\n",
+    "mbf_nonischemic_A = np.concatenate(df[(df['ischemic_grade'] == 0) & (df['tag'] != 'Nongrafted') & (df['tag'] != \"Nongrafted-Stenosis\")]['absMBF_A'].values)\n",
     "q1, q2, q3 = np.percentile(mbf_nonischemic_A, [25, 50, 75])\n",
     "average = np.mean(mbf_nonischemic_A)\n",
     "std = np.std(mbf_nonischemic_A)\n",
     "print(\"nonischemic_grafted_A\", q2, q3-q1, average, std)\n",
     "\n",
-    "index_mbf_nonischemic_B = np.concatenate(df[df['ischemic_grade'] == 0]['absMBF_A'].values)\n",
+    "index_mbf_nonischemic_B = np.concatenate(df[(df['ischemic_grade'] == 0) & (df['tag'] != 'Nongrafted') & (df['tag'] != \"Nongrafted-Stenosis\")]['absMBF_B'].values)\n",
     "q1, q2, q3 = np.percentile(index_mbf_nonischemic_B, [25, 50, 75])\n",
     "average = np.mean(index_mbf_nonischemic_B)\n",
     "std = np.std(index_mbf_nonischemic_B)\n",
@@ -599,40 +622,22 @@
     "    'MBF': np.concatenate([mbf_ischemic30_A, mbf_ischemic20_A, mbf_ischemic10_A, mbf_nonischemic_A]),\n",
     "    'Territory': ['Ischemic\\n Grafted\\n (>30%)'] * len(mbf_ischemic30_A) +\n",
     "             ['Ischemic\\n Grafted\\n (20-30%)'] * len(mbf_ischemic20_A) +\n",
-    "             ['Ischemic\\n Grafted\\n (10-20%)'] * len(mbf_ischemic10_A) + \n",
-    "             ['Nonischemic\\n Regions'] * len(mbf_nonischemic_A),  \n",
-    "    'Type': ['Pre-CABG'] * (len(mbf_ischemic10_A) +len(mbf_ischemic20_A) +len(mbf_ischemic30_A) + len(mbf_nonischemic_A))\n",
+    "             ['Nonischemic\\n Grafted\\n (10-20%)'] * len(mbf_ischemic10_A) + \n",
+    "             ['Nonischemic\\n Grafted\\n (<10%)'] * len(mbf_nonischemic_A),  \n",
+    "    'Type': ['Pre-CABG'] * (len(mbf_ischemic30_A) +len(mbf_ischemic20_A) +len(mbf_ischemic10_A) + len(mbf_nonischemic_A))\n",
     "})\n",
     "\n",
     "df_B = pd.DataFrame({\n",
     "    'MBF': np.concatenate([mbf_ischemic30_B, mbf_ischemic20_B, mbf_ischemic10_B, mbf_nonischemic_B]),\n",
     "    'Territory': ['Ischemic\\n Grafted\\n (>30%)'] * len(mbf_ischemic30_B) +\n",
     "             ['Ischemic\\n Grafted\\n (20-30%)'] * len(mbf_ischemic20_B) +\n",
-    "             ['Ischemic\\n Grafted\\n (10-20%)'] * len(mbf_ischemic10_B) + \n",
-    "             ['Nonischemic\\n Regions'] * len(mbf_nonischemic_B),\n",
-    "    'Type': ['Post-CABG'] * (len(mbf_ischemic10_B) + len(mbf_ischemic20_B) + len(mbf_ischemic30_B) + len(mbf_nonischemic_B))\n",
+    "             ['Nonischemic\\n Grafted\\n (10-20%)'] * len(mbf_ischemic10_B) + \n",
+    "             ['Nonischemic\\n Grafted\\n (<10%)'] * len(mbf_nonischemic_B),\n",
+    "    'Type': ['Post-CABG'] * (len(mbf_ischemic30_B) + len(mbf_ischemic20_B) + len(mbf_ischemic10_B) + len(mbf_nonischemic_B))\n",
     "})\n",
     "\n",
     "# Combine into a single DataFrame\n",
     "df_long = pd.concat([df_A, df_B], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "sns.violinplot(x='Territory', y='MBF', hue='Type', data = df_long, split=True, inner = 'quartiles', bw_adjust = 10, common_norm=True, linewidth= 2, palette={'A':'skyblue', 'B':'salmon'})\n",
-    "\n",
-    "plt.ylabel(\"Absolute MBF\")\n",
-    "#plt.xlabel(\"Group\")\n",
-    "plt.legend(title=\"Pre/Post CABG\")\n",
-    "plt.ylim([-80, 400])\n",
-    "plt.show()"
    ]
   },
   {
@@ -974,55 +979,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1 = pd.DataFrame({\n",
-    "    'Volume': volume_entire_cohort[\"Volume_A\"],\n",
-    "    'Case': ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_A\"]),\n",
-    "    'Type': ['Pre-CABG'] * len(volume_entire_cohort[\"Volume_A\"])\n",
-    "})\n",
-    "\n",
-    "df_2 = pd.DataFrame({\n",
-    "    'Volume': volume_entire_cohort[\"Volume_B\"],\n",
-    "    'Case': ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_B\"]),\n",
-    "    'Type': ['Post-CABG'] * len(volume_entire_cohort[\"Volume_B\"])\n",
-    "})\n",
-    "\n",
-    "df_long = pd.concat([df_1, df_2], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(7, 5))\n",
-    "ax = sns.boxplot(x='Case', y='Volume', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
-    "\n",
-    "ax.set_ylabel(\"Volume of Ischemic Regions (%)\", fontsize = 15)\n",
-    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
-    "ax.legend(loc = 'upper left')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df_A = pd.DataFrame({\n",
-    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_A\"], volume_data_nonischemic[\"Volume_A\"]]),\n",
-    "    'Case': ['Ischemic'] * len(volume_data_ischemic[\"Volume_A\"]) +\n",
-    "            ['NonIschemic'] * len(volume_data_nonischemic[\"Volume_A\"]),\n",
-    "    'Type': ['Pre-CABG'] * (len(volume_data_ischemic[\"Volume_A\"]) + len(volume_data_nonischemic[\"Volume_A\"]))\n",
+    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_A\"], volume_data_nonischemic[\"Volume_A\"], volume_entire_cohort[\"Volume_A\"]]),\n",
+    "    'Case': ['Ischemic\\n Cases'] * len(volume_data_ischemic[\"Volume_A\"]) +\n",
+    "            ['NonIschemic\\n Cases'] * len(volume_data_nonischemic[\"Volume_A\"]) +\n",
+    "            ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_A\"]),\n",
+    "    'Type': ['Pre-CABG'] * (len(volume_data_ischemic[\"Volume_A\"]) + len(volume_data_nonischemic[\"Volume_A\"]) + len(volume_entire_cohort[\"Volume_A\"]))\n",
     "})\n",
     "\n",
     "df_B = pd.DataFrame({\n",
-    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_B\"], volume_data_nonischemic[\"Volume_B\"]]),\n",
-    "    'Case': ['Ischemic'] * len(volume_data_ischemic[\"Volume_B\"]) +\n",
-    "            ['NonIschemic'] * len(volume_data_nonischemic[\"Volume_B\"]),\n",
-    "    'Type': ['Post-CABG'] * (len(volume_data_ischemic[\"Volume_B\"]) + len(volume_data_nonischemic[\"Volume_B\"]))\n",
+    "    'Volume': np.concatenate([volume_data_ischemic[\"Volume_B\"], volume_data_nonischemic[\"Volume_B\"], volume_entire_cohort[\"Volume_B\"]]),\n",
+    "    'Case': ['Ischemic\\n Cases'] * len(volume_data_ischemic[\"Volume_B\"]) +\n",
+    "            ['NonIschemic\\n Cases'] * len(volume_data_nonischemic[\"Volume_B\"]) +\n",
+    "            ['Entire Cohort'] * len(volume_entire_cohort[\"Volume_B\"]),\n",
+    "    'Type': ['Post-CABG'] * (len(volume_data_ischemic[\"Volume_B\"]) + len(volume_data_nonischemic[\"Volume_B\"]) + len(volume_entire_cohort[\"Volume_B\"]))\n",
     "})\n",
     "\n",
     "df_long = pd.concat([df_A, df_B], ignore_index=True)"
@@ -1035,11 +1005,11 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(7, 5))\n",
-    "ax = sns.boxplot(x='Case', y='Volume', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'lightskyblue', 'Post-CABG':'orangered'})\n",
+    "ax = sns.boxplot(x='Case', y='Volume', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'paleturquoise', 'Post-CABG':'coral'})\n",
     "\n",
     "ax.set_ylabel(\"Volume of Ischemic Regions (%)\", fontsize = 15)\n",
     "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
-    "ax.legend(loc = 'upper left')\n",
+    "ax.legend(loc = 'lower left')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -1098,6 +1068,51 @@
     "\n",
     "EntireCohort_B = np.concatenate([volume_entire_cohort[\"Volume_B\"]])\n",
     "print(\"Volume of Ischemic Regions (Entire Dataset) Post-CABG: \", GetStats(EntireCohort_B))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyzing Based on the Graft Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grafts = sorted(set(PatientMetadata[\"graft\"]))\n",
+    "print(grafts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(PatientMetadata[\"graft\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df[\"tag\"]))\n",
+    "print(df[\"tag\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(PatientMetadata[\"NG\"].value_counts())"
    ]
   }
  ],
