Compare MBF based on the graft type

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -338,6 +338,7 @@
     "    ischemia = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['is-ischemic'])\n",
     "    TerritoryTags = [f'post_{tag}' for tag in tags]\n",
     "    cutoff = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['cutoff'])[0]\n",
+    "    grafts = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['graft'])\n",
     "    if cutoff == 0:\n",
     "        cutoff = 142\n",
     "    for file in TerritoryLabels:\n",
@@ -363,16 +364,16 @@
     "\n",
     "    for i, t in enumerate(tags):\n",
     "        AbsMBFData_A_mapped = MapNongrafted(mean_A, mean_B, std_A, std_B, AbsMBFData_A[t])\n",
-    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"is_ischemic\": ischemia[i], \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
+    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": grafts[i], \"is_ischemic\": ischemia[i], \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
     "        dataMapped.append(data_)\n",
     "    t = \"Nongrafted-Stenosis\"\n",
     "    if t in MBF_Labels.keys():\n",
     "        AbsMBFData_A_mapped = MapNongrafted(mean_A, mean_B, std_A, std_B, AbsMBFData_A[t])\n",
-    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
+    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": grafts[i], \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
     "        dataMapped.append(data_)\n",
     "    t = \"Nongrafted\"\n",
     "    AbsMBFData_A_mapped = MapNongrafted(mean_A, mean_B, std_A, std_B, AbsMBFData_A[t])\n",
-    "    data_ = {\"patient_id\": patient_id, \"tag\": t, \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
+    "    data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": grafts[i], \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
     "    dataMapped.append(data_)\n",
     "\n",
     "# --- Post-process after collecting all data: Measuring 30% drop in ischemic regions\n",
@@ -1114,6 +1115,70 @@
    "source": [
     "print(PatientMetadata[\"NG\"].value_counts())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LIMA_mbf_A = np.concatenate(df[df['graft_type'] == 'LIMA']['absMBF_A'].values)\n",
+    "LIMA_mbf_B = np.concatenate(df[df['graft_type'] == 'LIMA']['absMBF_B'].values)\n",
+    "\n",
+    "Radial_mbf_A = np.concatenate(df[df['graft_type'] == 'Radial']['absMBF_A'].values)\n",
+    "Radial_mbf_B = np.concatenate(df[df['graft_type'] == 'Radial']['absMBF_B'].values)\n",
+    "\n",
+    "SVG_mbf_A = np.concatenate(df[df['graft_type'] == 'SVG']['absMBF_A'].values)\n",
+    "SVG_mbf_B = np.concatenate(df[df['graft_type'] == 'SVG']['absMBF_B'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LIMA_mbf_A, Radial_mbf_A, SVG_mbf_A]),\n",
+    "    'Graft': ['LIMA'] * len(LIMA_mbf_A) +\n",
+    "                ['Radial'] * len(Radial_mbf_A) +\n",
+    "                ['SVG'] * len(SVG_mbf_A),\n",
+    "    'Type': ['Pre-CABG'] * (len(LIMA_mbf_A) + len(Radial_mbf_A) + len(SVG_mbf_A))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LIMA_mbf_B, Radial_mbf_B, SVG_mbf_B]),\n",
+    "    'Graft': ['LIMA'] * len(LIMA_mbf_B) +\n",
+    "                ['Radial'] * len(Radial_mbf_B) +\n",
+    "                ['SVG'] * len(SVG_mbf_B),\n",
+    "    'Type': ['Post-CABG'] * (len(LIMA_mbf_B) + len(Radial_mbf_B) + len(SVG_mbf_B))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Graft', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'plum', 'Post-CABG':'gold'})\n",
+    "\n",
+    "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
