Add graph of volume per graft and change normalization technique to histogram mode

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -146,6 +146,14 @@
     "\n",
     "    return MBF\n",
     "\n",
+    "def GetVolume(Grid):\n",
+    "    Volume = 0\n",
+    "    for i in range(Grid.GetNumberOfCells()):\n",
+    "        voxel = Grid.GetCell(i)\n",
+    "        cell_bounds = voxel.GetBounds()\n",
+    "        Volume += abs(cell_bounds[0] - cell_bounds[1]) * abs(cell_bounds[2] - cell_bounds[3]) * abs(cell_bounds[4] - cell_bounds[5])\n",
+    "    \n",
+    "    return Volume\n",
     "\n",
     "def CollectMBFData(MBF, Labels):\n",
     "    for i in range(MBF.GetPointData().GetNumberOfArrays()):\n",
@@ -167,6 +175,15 @@
     "    \n",
     "\n",
     "    return AbsMBFData, IndexMBFData\n",
+    "\n",
+    "def GetRegionVolume(MBF, Labels, key):\n",
+    "    volume = 0\n",
+    "\n",
+    "    for i in Labels[key]:\n",
+    "        territory_ = ThresholdInBetween(MBF, \"TerritoryMaps\", i, i)\n",
+    "        volume += GetVolume(territory_)\n",
+    "    \n",
+    "    return volume\n",
     "\n",
     "def BoxPlot(DataFrame):\n",
     "    plt.figure(figsize=(8, 5))\n",
@@ -917,30 +934,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GetVolume(Grid):\n",
-    "    Volume = 0\n",
-    "    for i in range(Grid.GetNumberOfCells()):\n",
-    "        voxel = Grid.GetCell(i)\n",
-    "        cell_bounds = voxel.GetBounds()\n",
-    "        Volume += abs(cell_bounds[0] - cell_bounds[1]) * abs(cell_bounds[2] - cell_bounds[3]) * abs(cell_bounds[4] - cell_bounds[5])\n",
-    "    \n",
-    "    return Volume"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "volume_data_ischemic = []\n",
     "volume_data_nonischemic = []\n",
-    "Removed_Cases += ['SU03']\n",
+    "Removed_Cases_volume = Removed_Cases + ['SU03']\n",
     "for patient_id in patient_ids:\n",
-    "    if patient_id in Removed_Cases: \n",
+    "    if patient_id in Removed_Cases_volume: \n",
     "        continue\n",
     "    \n",
-    "    normalization_method = \"classic\"\n",
+    "    normalization_method = \"mode\"\n",
     "    for file in VTUFiles:\n",
     "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
     "            MBF_A = Normalize(ReadVTUFile(file), normalization_method)\n",
@@ -1025,14 +1026,14 @@
     "\n",
     "for i in range(len(volume_data_ischemic)):\n",
     "    if i == 0:\n",
-    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"red\", label = \"Ischemic\")\n",
+    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"orange\", label = \"Ischemic\")\n",
     "    else:\n",
-    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"red\", label = None)\n",
+    "        plt.plot([0, 1], [volume_data_ischemic[\"Volume_A\"][i], volume_data_ischemic[\"Volume_B\"][i]], marker = \"o\", color = \"orange\", label = None)\n",
     "for i in range(len(volume_data_nonischemic)):\n",
     "    if i == 0:\n",
-    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"green\", label = \"NonIschemic\")\n",
+    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"lightblue\", label = \"NonIschemic\")\n",
     "    else:\n",
-    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"green\", label = None)\n",
+    "        plt.plot([0, 1], [volume_data_nonischemic[\"Volume_A\"][i], volume_data_nonischemic[\"Volume_B\"][i]], marker = \"p\", color = \"lightblue\", label = None)\n",
     "plt.xticks([0, 1], [\"Pre-CABG\", \"Post-CABG\"])\n",
     "plt.ylabel(\"Volume of Ischemic Regions (%)\")\n",
     "plt.legend()\n",
@@ -1169,6 +1170,111 @@
     "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
     "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
     "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing the volume fed by each graft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LIMA_volume_A = []\n",
+    "LIMA_volume_B = []\n",
+    "\n",
+    "Radial_volume_A = []\n",
+    "Radial_volume_B = []\n",
+    "\n",
+    "SVG_volume_A = []\n",
+    "SVG_volume_B = []\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases_volume: \n",
+    "        continue\n",
+    "    tags = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['stenosis tag'])\n",
+    "    TerritoryTags = [f'post_{tag}' for tag in tags]\n",
+    "    grafts = list(PatientMetadata[PatientMetadata['patient-id'] == patient_id]['graft'])\n",
+    "    for file in TerritoryLabels:\n",
+    "        if patient_id in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            LabelFile = file\n",
+    "    MBF_Labels = ReadLabels(LabelFile, TerritoryTags)\n",
+    "    normalization_method = \"classic\"\n",
+    "    for file in VTUFiles:\n",
+    "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_A = Normalize(ReadVTUFile(file), normalization_method)\n",
+    "        elif f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_B = Normalize(ReadVTUFile(file), normalization_method)\n",
+    "\n",
+    "        for tag in tags:\n",
+    "            graft = PatientMetadata[(PatientMetadata['patient-id'] == patient_id) & (PatientMetadata['stenosis tag'] == tag)]['graft']\n",
+    "            if graft.iloc[0] == 'LIMA':\n",
+    "                LIMA_volume_A.append(GetRegionVolume(MBF_A, MBF_Labels, tag))\n",
+    "                LIMA_volume_B.append(GetRegionVolume(MBF_B, MBF_Labels, tag))\n",
+    "            if graft.iloc[0] == 'Radial':\n",
+    "                Radial_volume_A.append(GetRegionVolume(MBF_A, MBF_Labels, tag))\n",
+    "                Radial_volume_B.append(GetRegionVolume(MBF_B, MBF_Labels, tag))\n",
+    "            if graft.iloc[0] == 'SVG':\n",
+    "                SVG_volume_A.append(GetRegionVolume(MBF_A, MBF_Labels, tag))\n",
+    "                SVG_volume_B.append(GetRegionVolume(MBF_B, MBF_Labels, tag))\n",
+    "\n",
+    "LIMA_volume_A = np.array(LIMA_volume_A)\n",
+    "LIMA_volume_B = np.array(LIMA_volume_B)\n",
+    "\n",
+    "Radial_volume_A = np.array(Radial_volume_A)\n",
+    "Radial_volume_B = np.array(Radial_volume_B)\n",
+    "\n",
+    "SVG_volume_A = np.array(SVG_volume_A)\n",
+    "SVG_volume_B = np.array(SVG_volume_B)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A = pd.DataFrame({\n",
+    "    'Volume': np.concatenate([LIMA_volume_A, Radial_volume_A, SVG_volume_A]),\n",
+    "    'Graft':\n",
+    "        ['LIMA'] * len(LIMA_volume_A) +\n",
+    "        ['Radial'] * len(Radial_volume_A) +\n",
+    "        ['SVG'] * len(SVG_volume_A),\n",
+    "    'Type': ['Pre-CABG'] * (len(LIMA_volume_A) + len(Radial_volume_A) + len(SVG_volume_A))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'Volume': np.concatenate([LIMA_volume_B, Radial_volume_B, SVG_volume_B]),\n",
+    "    'Graft':\n",
+    "        ['LIMA'] * len(LIMA_volume_B) +\n",
+    "        ['Radial'] * len(Radial_volume_B) +\n",
+    "        ['SVG'] * len(SVG_volume_B),\n",
+    "    'Type': ['Post-CABG'] * (len(LIMA_volume_B) + len(Radial_volume_B) + len(SVG_volume_B))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(5, 5))\n",
+    "ax = sns.boxplot(x='Graft', y='Volume', hue='Type', data= df_B, showfliers=False, width = 0.4, palette={'Pre-CABG':'plum', 'Post-CABG':'azure'})\n",
+    "\n",
+    "ax.set_ylabel(\"Volume (mL)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "ax.legend(loc = 'upper right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
