Add Kruskal-Wallis test for testing the improvement by the graft type

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import ttest_rel, wilcoxon\n",
+    "from scipy.stats import kruskal, wilcoxon\n",
     "from scipy.ndimage import gaussian_filter\n",
     "from utilities import ReadVTUFile, ThresholdInBetween, ThresholdByUpper, LargestConnectedRegion, WriteVTUFile\n",
     "from vtk.util.numpy_support import vtk_to_numpy, numpy_to_vtk"
@@ -109,7 +109,7 @@
     "    \n",
     "    ScalarArray = vtk_to_numpy(MBF.GetPointData().GetArray(ArrayName))\n",
     "    #HealthyMyo = LargestConnectedRegion(ThresholdByUpper(MBF, ArrayName, cutoff))\n",
-    "    HealthyMyo = LargestConnectedRegion(ThresholdInBetween(MBF, ArrayName, cutoff, np.percentile(ScalarArray,90)))\n",
+    "    HealthyMyo = LargestConnectedRegion(ThresholdInBetween(MBF, ArrayName, np.percentile(ScalarArray,10), np.percentile(ScalarArray,90)))\n",
     "    #HealthyMyo = LargestConnectedRegion(ThresholdByUpper(HealthyMyo, ArrayName, cutoff))\n",
     "    ScalarArray_healthy = vtk_to_numpy(HealthyMyo.GetPointData().GetArray(ArrayName))\n",
     "    \n",
@@ -318,9 +318,9 @@
     "    \n",
     "    \n",
     "    #BoxPlot(data)\n",
-    "    ViolinPlot(data)\n",
-    "    print(\"--- Mapping Results:\")\n",
-    "    ViolinPlot(dataMapped)\n"
+    "    #ViolinPlot(data)\n",
+    "    #print(\"--- Mapping Results:\")\n",
+    "    #ViolinPlot(dataMapped)\n"
    ]
   },
   {
@@ -386,11 +386,11 @@
     "    t = \"Nongrafted-Stenosis\"\n",
     "    if t in MBF_Labels.keys():\n",
     "        AbsMBFData_A_mapped = MapNongrafted(mean_A, mean_B, std_A, std_B, AbsMBFData_A[t])\n",
-    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": grafts[i], \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
+    "        data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": None, \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
     "        dataMapped.append(data_)\n",
     "    t = \"Nongrafted\"\n",
     "    AbsMBFData_A_mapped = MapNongrafted(mean_A, mean_B, std_A, std_B, AbsMBFData_A[t])\n",
-    "    data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": grafts[i], \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
+    "    data_ = {\"patient_id\": patient_id, \"tag\": t, \"graft_type\": None, \"is_ischemic\": False, \"ischemic_grade\":0, \"absMBF_A\": AbsMBFData_A_mapped, \"absMBF_B\": AbsMBFData_B[t], \"rawMBF_A\": AbsMBFData_A[t]}\n",
     "    dataMapped.append(data_)\n",
     "\n",
     "# --- Post-process after collecting all data: Measuring 30% drop in ischemic regions\n",
@@ -1280,11 +1280,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Statistical Analysis: Kruskal-Wallis test on the differences of median MBF per graft type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "LIMA_d_median_mbf = []\n",
+    "Radial_d_median_mbf = []\n",
+    "SVG_d_median_mbf = []\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    df_patient = df[df[\"patient_id\"] == patient_id]\n",
+    "    if df_patient.empty:\n",
+    "        print(f\"Patient {patient_id} not found in DataFrame. Skipping.\")\n",
+    "        continue\n",
+    "    \n",
+    "    grafts = list(df[df[\"patient_id\"] == patient_id][\"graft_type\"])\n",
+    "    for graft in grafts:\n",
+    "        if graft:\n",
+    "            median_A = np.median(df[(df[\"patient_id\"] == patient_id) & (df[\"graft_type\"] == graft)][\"absMBF_A\"].iloc[0])\n",
+    "            median_B = np.median(df[(df[\"patient_id\"] == patient_id) & (df[\"graft_type\"] == graft)][\"absMBF_B\"].iloc[0])\n",
+    "        diff = median_B - median_A\n",
+    "        if graft == \"LIMA\":\n",
+    "            LIMA_d_median_mbf.append(diff)\n",
+    "        elif graft == \"Radial\":\n",
+    "            Radial_d_median_mbf.append(diff)\n",
+    "        elif graft == \"SVG\":\n",
+    "            SVG_d_median_mbf.append(diff)\n",
+    "        else:\n",
+    "            pass\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat, p = kruskal(LIMA_d_median_mbf, Radial_d_median_mbf, SVG_d_median_mbf)\n",
+    "print(p)\n",
+    "if p > 0.05:\n",
+    "    print(\"There is no significant difference in improvement (ΔMBF) between different graft types.\")\n",
+    "else:\n",
+    "    print(\"There is a difference—at least one graft type shows a significantly different median improvement.\")"
+   ]
   }
  ],
  "metadata": {
